frontend-support/app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-support
  labels:
    app: app-support
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app-support
    spec:
      containers:
      - name: echoheaders
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: app-support
  labels:
    app: app-support
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: app-support
