frontend-support/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:

  name: ingress

  annotations:

    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"

spec:
  tls:
 
  - hosts:
    - support.streamnvr.com
    secretName: tls-support.streamnvr.com

  rules:

  - host: support.streamnvr.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-support
          servicePort: 80
